objects/Bundle_Card__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bundle Cards</relationshipLabel>
        <relationshipName>Bundle_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bundle Cards</relationshipLabel>
        <relationshipName>Bundle_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cvent_Account_ID__c</fullName>
        <formula>Contact__r.Cvent_Account_ID__c</formula>
        <label>Cvent Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dont_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dont Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mood__c</fullName>
        <label>Mood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Ecstatic</fullName>
                </value>
                <value>
                    <fullName>4 - Happy</fullName>
                </value>
                <value>
                    <fullName>3 - Neutral</fullName>
                </value>
                <value>
                    <fullName>2 - Frustrated</fullName>
                </value>
                <value>
                    <fullName>1 - Irate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oversold_Comment__c</fullName>
        <label>Post Purchase Concern Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Oversold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Purchase Concern</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Purchase_Reason__c</fullName>
        <label>Post Purchase Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Oversold__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Service Expectations</fullName>
                </value>
                <value>
                    <fullName>Timelines</fullName>
                </value>
                <value>
                    <fullName>Contracting Issue</fullName>
                </value>
                <value>
                    <fullName>Not a Fit/Workaround Reliant</fullName>
                </value>
                <value>
                    <fullName>Presold Feature</fullName>
                </value>
                <value>
                    <fullName>No TSC/Demo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Reason_for_Mood__c</fullName>
        <label>Primary Reason for Mood</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Mood__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent__c</fullName>
        <label>Total Time Spent(In Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Bundle Card</label>
    <nameField>
        <displayFormat>BCard-{0000}</displayFormat>
        <label>Bundle Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>